# fiveCardDraw

./: .gitignore  README.md  cabal.project  fiveCardDraw.cabal  flake.nix  hie.yaml
.task/checksum/: lib-build
lib/FiveCardDraw/: Actions.hs  FiveCardDraw.hs  Hands.hs  Types.hs  Validation.hs
lib/FiveCardDraw/Utils/: OneOfN.hs  Utils.hs
src/: Main.hs
test/: Spec.hs
