cabal-version:   2.4
name:            fiveCardDraw
version:         0
tested-with:     GHC ==8.6.3 || ==8.8.3 || ==8.10.5
description:     Five card draw is a simple poker style game. This library provides the basic functionality to play the game.
author:          José María Landa Chávez
maintainer:      José María Landa Chávez - josemaria.landa@gmail.com
copyright:       2024-03-03 José María Landa Chávez
build-type:      Simple
extra-doc-files: 
  README.md
  CHANGELOG.md
license:         MIT
license-file:    LICENSE
  
common common-options
  build-depends:      base >=4.9 && <5
  default-language:   Haskell2010
  default-extensions: DataKinds,
                      TypeOperators,
                      ScopedTypeVariables,
                      TypeApplications,
                      RecordWildCards,
                      OverloadedStrings,
                      PolyKinds,
                      FlexibleContexts,
                      ConstraintKinds,
                      ViewPatterns,
                      LambdaCase,
                      GeneralizedNewtypeDeriving,
                      TupleSections,
                      InstanceSigs,
                      DeriveFunctor,
                      NamedFieldPuns,
                      TypeFamilies,
                      FlexibleInstances,
                      UndecidableInstances,
                      DeriveDataTypeable,
                      OverloadedRecordDot,
                      TemplateHaskell,
                      MultiWayIf
  ghc-options:

executable fiveCardDraw-exe
  import:         common-options
  hs-source-dirs: src
  main-is:        Main.hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:  fiveCardDraw, random, pretty-simple, free

library
  import:          common-options
  hs-source-dirs:  lib
  exposed-modules: 
      FiveCardDraw.FiveCardDraw
    , FiveCardDraw.Types
    , FiveCardDraw.Utils.Utils
  other-modules: 
      FiveCardDraw.Actions
    , FiveCardDraw.Validation
    , FiveCardDraw.Hands

  build-depends: 
      free
    , template-haskell
    , transformers
    , containers
    , mtl
    , random
    , first-class-families
    , lens
  
test-suite fiveCardDraw-test
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  build-depends:
    , fiveCardDraw
    , hspec
    , HUnit
    , tasty
    , tasty-hunit
    , containers
    , random
    , QuickCheck
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

benchmark fiveCardDraw-bench
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is:        Main.hs
  build-depends:
    , fiveCardDraw
    , criterion
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
